# botbacktester

./: README.rst  pyproject.toml  setup.py
botbacktester/: __init__.py  enums.py  evaluate.py  items.py  status.py  tester.py  utils.py
botbacktester/fast/: __init__.py  tester.py
notebooks/: golden_cross.ipynb  golden_cross_dead_cross.ipynb  richmanbtc_atr.ipynb
notebooks/data/: sample_1min.csv
tests/: test_backtest.py
