[tool.poetry]
name = "botbacktester"
version = "0.1.0"
description = ""
authors = ["ko0hi"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
